--- a/dsl/bintray-jvm.gradle
+++ b/dsl/bintray-jvm.gradle
@@ -66,5 +66,5 @@ if (project.hasProperty("install_snapshot")) {
 }
 
 
-println ":${project.name}:bintrayUpload  -> ${bintray_package_name} : ${version}"
+println ":${project.name}:bintrayUpload  -> ${artifact_group} : ${version}"
 println ":${project.name}:uploadArchives -> file:${System.getProperty('user.home')}/.m2/repository : ${version}"
