--- a/scripts/formatter.gradle
+++ b/scripts/formatter.gradle
@@ -1,5 +1,6 @@
 apply from: rootProject.file("scripts/formatter-kotlin.gradle")
+apply from: rootProject.file("scripts/formatter-crlf.gradle.kts")
 
 task format {
-    dependsOn "formatKotlin"
+    dependsOn "formatLineSeparator"
 }
