--- a/build.properties.gradle
+++ b/build.properties.gradle
@@ -1,12 +1,11 @@
 // Project settings.
 ext {
     artifact.base_version = "1.3"
-    artifact.base_group = "com.eaglesakura.armyknife"
+    artifact.base_group = "io.github.eaglesakura"
+    mavencentral.pom_description = "Light-Weight extension library"
 
-    bintray_configs.user = "eaglesakura"
-    bintray_configs.labels = ["kotlin", "android"]
-    bintray_configs.vcs_url = "https://github.com/eaglesakura/${rootProject.name}"
-    bintray_configs.repository_name = "maven"
-    bintray_configs.issues_url = "${bintray_configs.vcs_url}/issues"
-    bintray_configs.licenses = ["MIT"]
+    mavencentral.vcs_url = "https://github.com/eaglesakura/${rootProject.name}"
+    mavencentral.license_name = "MIT"
+    mavencentral.license_url = mavencentral.vcs_url
+    mavencentral.package_group = "io.github.eaglesakura"
 }
