mod: optimize gradle files refs #2

--- a/scripts/deploy-mavencentral-jvm.gradle
+++ b/scripts/deploy-mavencentral-jvm.gradle
@@ -75,3 +75,5 @@ publishing {
 signing {
     sign publishing.publications.release
 }
+
+println("artifact \"${project.group}:${project.name}:${project.version}\"")
