chg: split 'Random' object from armyknife-runtime module

--- a/build.properties.gradle
+++ b/build.properties.gradle
@@ -1,8 +1,8 @@
 // Project settings.
 ext {
-    artifact.base_version = "1.4"
+    artifact.base_version = "1.0"
     artifact.base_group = "io.github.eaglesakura"
-    mavencentral.pom_description = "Light-Weight extension library"
+    mavencentral.pom_description = "Random value generator with Kotlin."
 
     mavencentral.vcs_url = "https://github.com/eaglesakura/${rootProject.name}"
     mavencentral.license_name = "MIT"
